Tue May  6 11:44:33 2003  David Helder  <dhelder@umich.edu>

	* src/tcp.c (gnet_tcp_socket_connect_inetaddr_cb): 
	   Don't delete the addresses in state.  The get deleted
	   when we call cancel.

Tue Apr 29 13:57:43 2003  David Helder  <dhelder@umich.edu>

	* README (Features): Remove GnomeICU

Tue Apr 29 12:23:34 2003  David Helder  <dhelder@umich.edu>

	* configure.ac: Fix AC_INIT version.

Mon Apr 28 12:32:55 2003  David Helder  <dhelder@umich.edu>

	* configure.ac (GNET_BINARY_AGE): version++
	* gnet.pc.in, src/?: Sun compiler patch from Ives Aerts
	* gnet.spec.in: Fixes from Bas Mevissen

Mon Apr 21 18:22:07 2003  David Helder  <dhelder@umich.edu>

	* configure.ac: Update version for 2.0.1

Thu Apr 17 17:52:20 2003  David Helder  <dhelder@umich.edu>

	* tests/inetaddr_test.c (main): More IPv6 fixes.
	* configure.ac: Check for -pthreads (alternative to -pthread)

Wed Apr 16 15:21:21 2003  David Helder  <dhelder@umich.edu>

	* src/inetaddr.c (gnet_gethostbyname): Remover sa_inp - not used.
	* src/inetaddr.c (gnet_gethostbyname): "

	* src/gnet-private.h: Fix sockaddr_storage def.

Wed Apr 16 11:52:22 2003  David Helder  <dhelder@umich.edu>

	* src/{inetaddr,mcast,udp, gnet-private, gnet}.c: Use HAVE_IPV6
	* examples/inetaddr_test.c: "
	* configure.ac (HAVE_IPV6): Added check for.

Tue Apr 15 13:37:38 2003  David Helder  <dhelder@umich.edu>

	* src/gnet-private.h: define sockaddr_storage if not defined.
	* configure.ac: Check for sockaddr_storage

Tue Apr 15 11:07:52 2003  David Helder  <dhelder@umich.edu>

	* src/gnet.c (ipv6_detect_envvar): s/index/strchr/

Sun Apr 13 17:50:23 2003  David Helder  <dhelder@umich.edu>

	* doc/Makefile.am (maintainer-clean-local): Fix clean rule.

Sun Apr 13 14:09:14 2003  David Helder  <dhelder@umich.edu>

	* doc/gnet-docs.sgml: Update version.

Sat Apr 12 15:24:21 2003  David Helder  <dhelder@umich.edu>

	* *: Various 2.0 renames.
	* tests/client_server_test.pl (test): Add a pause - too
	   fast for BSD.
